Update paper with latest edits and compile timestamped PDF
- Generated paper_2026-02-05_2052.pdf with timestamp: 2026-02-05 20:52 EST
- Updated paper.tex with latest content revisions

--- a/paper.tex
+++ b/paper.tex
@@ -93,7 +93,7 @@ Despite the promising theoretical framework that RL offers for optimizing long-t
 Second, designing appropriate reward functions is critical, as poorly chosen reward functions can lead to unintended system behaviors that degrade user experience or negatively affect business revenue \cite{everitt2021reward}. For example, a reward function that overly prioritizes click-based metrics may drive the system to promote clickbait content, boosting short-term engagement but eroding user trust and satisfaction over time \cite{wu2017returning}. Similarly, a reward function too heavily skewed toward revenue metrics could result in excessive ad load, disrupting the user experience and leading to churn. Striking the right balance in reward function design is essential to achieve both user engagement and monetization objectives without compromising the platform’s long-term goals.\\
 
 
-Furthermore, interpretability is a major challenge in RL deployment. Understanding the learned policies--the strategies adopted by the RL agent--can be particularly difficult when policies are updated in real-time during user interactions (online policy learning) \cite{glanois2024survey} \cite{vouros2022explainable} \cite{dulac2019challenges}. This real-time adaptation complicates monitoring and evaluation, making it challenging to understand what is happening during online learning. In extreme cases, this lack of transparency could result in non-compliant or unethical behavior, posing significant risks to both users and the business \cite{lambert2023entangled}.\\
+Furthermore, interpretability is a major challenge in RL deployment. Understanding the learned policies--the strategies adopted by the RL agent--can be particularly difficult when policies are updated in real-time during user interactions (online policy learning) \cite{glanois2024survey} \cite{vouros2022explainable} \cite{dulac2019challenges}. In extreme cases, this lack of transparency could result in non-compliant or unethical behavior, posing significant risks to both users and the business \cite{lambert2023entangled}.\\
 
 	% 7.	What are the objectives and contributions of this paper?
 In light of the challenges outlined above, this paper examines methodologies and frameworks used to implement RL for large-scale recommendation systems, with a particular focus on contexts where ad revenue is central to the business model. Although previous surveys address RL in recommendation systems \cite{lin2023survey, afsar2022reinforcement}, they do not specifically explore how RL can balance the competing demands of ad and organic content. This paper fills that gap by analyzing approaches tailored to these unique challenges and bridging the divide between theoretical RL concepts and their real-world applications.
